added JWT and cleaned startup

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "Default": "Data source=datingapp.db"
   },
+  "TokenKey": "super secret unduessable key",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
