--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
     "Default": "Data source=datingapp.db"
   },
-  "TokenKey": "super secret unduessable key",
+  "TokenKey": "not so super secret unguessable key",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
